feat: implement BigQuery query optimizer with CLI and core services
Add complete implementation of the BigQuery AutoMV tool with five user
stories: analyze query patterns, generate cost reports, verify Smart Tuning
eligibility, generate materialized views, and monitor MV impact.

Foundation:
- Python 3.14+ project structure with uv and setuptools backend
- Core dependencies: cyclopts, sqlglot, google-cloud-bigquery, aiohttp, tqdm
- Ruff formatting/linting, mypy type checking, pre-commit hooks
- CLI entry point: bq-automv

CLI (cyclopts-based with global config):
- analyze: Scan INFORMATION_SCHEMA.JOBS for expensive query families
- report: Generate cost projections for optimization candidates
- smart-tuning-check: Verify Smart Tuning eligibility with detailed rules
- generate-mv: Create and deploy materialized views with DDL preview
- impact: Track MV usage and cost savings over time

Services:
- bq_client: Async BigQuery client wrapper with region validation
- sql_parser: sqlglot-based parser with BigQuery dialect support
- analyzer: Query aggregation, impact scoring, and candidate filtering
- smart_tuning: Eligibility ruleset with stable/preview basis tracking
- reporter: Cost analysis with configurable pricing models
- mv_generator: DDL generation with refresh interval configuration
- impact: Usage tracking from query history with baseline comparison

Models (dataclasses):
- QueryCandidate: Query family metadata with execution metrics
- TableReference: Referenced table with project/dataset/table
- SmartTuningCheckResult: Eligibility with recommended MV structure
- MaterializedViewArtifact: MV metadata with status enum
- CostAnalysisResult: Financial projections with dollar calculations
- ImpactReport: MV usage with per-MV breakdown

Lib:
- config: ImpactScoringConfig, MVConfig, AnalysisConfig dataclasses
- logging: Structured logging with verbosity levels and JSON support
- utils: Helper functions for CLI formatting and validation

Tests:
- Unit tests for sql_par